[OSAP-1882] Fix range slider display on Safari

--- a/src/components/player/_vars.scss
+++ b/src/components/player/_vars.scss
@@ -5,4 +5,5 @@
   --vp-bg-color: var(--vps-bg-color, black);
   --vp-bg-color-rgb: var(--vps-bg-color-rgb, 0, 0, 0);
   --vp-menu-color-rgb: var(--vps-menu-color-rgb, 50, 50, 50);
+  --vp-control-slider-height: var(--vps-control-slider-height, 0.5em);
 }
